feat(front-end): implement real-time chat; fix user details display