@@ -1,4 +1,6 @@
-package org.example.divar.model;
+package org.example.divar.chat.model;
+
+import org.example.divar.model.Advertisement;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -6,14 +8,29 @@ import java.util.List;
 public class Conversation {
 
     private Advertisement advertisement;
+    private Long adId;
+    private String adTitle;
     private String buyerUsername;
     private String sellerUsername;
     private List<Message> messages;
     private Long buyerId;
     private Long sellerId;
 
+
+    //We create:
     public Conversation(Advertisement advertisement, String buyerUsername, String sellerUsername) {
         this.advertisement = advertisement;
+        this.adId = advertisement != null ? advertisement.getId() : null;
+        this.buyerUsername = buyerUsername;
+        this.sellerUsername = sellerUsername;
+        this.messages = new ArrayList<>();
+    }
+
+    //Received from server:
+    public Conversation(Long adId, String adTitle, String buyerUsername, String sellerUsername) {
+        this.advertisement = null;
+        this.adId = adId;
+        this.adTitle = adTitle;
         this.buyerUsername = buyerUsername;
         this.sellerUsername = sellerUsername;
         this.messages = new ArrayList<>();
@@ -23,17 +40,20 @@ public class Conversation {
         return advertisement;
     }
 
+    public Long getAdId() {
+        return adId;
+    }
+
     public String getAdvertisementTitle() {
         if (advertisement != null) {
             return advertisement.getTitle();
         }
-        return "No Title";
+        return adTitle;
     }
 
     public String getBuyerUsername() {
         return buyerUsername;
     }
-
 
     public String getSellerUsername() {
         return sellerUsername;
@@ -47,12 +67,11 @@ public class Conversation {
         this.messages.add(message);
     }
 
-
     public String getLastMessage() {
         if (messages.isEmpty()) {
             return "No messages";
         }
-        return messages.get(messages.size() - 1).getText();
+        return messages.getLast().getText();
     }
 
     public Long getBuyerId() {
@@ -71,4 +90,3 @@ public class Conversation {
         this.sellerId = sellerId;
     }
 }
-
